[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "icefold-runner"
version = "0.1.6"
description = "Self-hosted execution runner for IceFold nodes (reverse-connects to an IceFold server, like a self-hosted CI runner)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "IceFold" }]
keywords = ["icefold", "runner", "self-hosted", "node-execution"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = [
    "icefold-sdk>=0.1.0",
    "websockets>=12",
    "httpx>=0.27",
]

[project.scripts]
icefold-runner = "icefold_runner.__main__:main"

[project.urls]
Homepage = "https://github.com/IceFold/icefold-runner"
Repository = "https://github.com/IceFold/icefold-runner"

[tool.setuptools]
packages = ["icefold_runner"]
